--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -1,9 +1,7 @@
-@import '~@fontsource/roboto/index.css';
-@import '~@fontsource/roboto/700.css';
-@import '~@fontsource/caveat/index.css';
-@import '~@fontsource/caveat/700.css';
+@import '~bootstrap/scss/bootstrap.scss';
 @import './variables.scss';
 @import './mixins.scss';
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
 
 * {
     box-sizing: border-box;
@@ -15,6 +13,16 @@ body {
     font-family: 'Roboto';
 }
 
-h1 {
-    font-family: 'Caveat';
+ul {
+    list-style: unset;
+}
+
+a {
+    text-decoration: unset;
+    color: unset;
+
+    &:hover {
+        text-decoration: unset;
+        color: unset;
+    }
 }
