--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -7,4 +7,13 @@ $base-font: 'Roboto';
 $title-font: 'Caveat';
 
 // Text Colors
-$bg-color: #F5F5F5;
+$base-color: #797979;
+$logo-color: #374a5e;
+
+// Background Colors
+$bg-countdown: #F5F5F5;
+
+// Button Colors
+$btn-1-color: #ffffff;
+$btn-1-bg-color: #EF6F31;
+$btn-1-bg-color-hover: #6AC5F1;
