--- a/src/assets/style/mixins.scss
+++ b/src/assets/style/mixins.scss
@@ -1,5 +1,22 @@
 @import './variables.scss';
 
-@mixin transition-type-1($property: all) {
-    transition: $property .3s linear;
+// Buttons
+@mixin button-layout($type_color: unset, $type_background: unset, $hover_color: unset, $hover_background: unset) {
+    padding: 7px 40px;
+    border-radius: 5px;
+    font-weight: 700;
+    color: $type_color;
+    background-color: $type_background;
+    @include transition-type-1(color);
+    @include transition-type-1(background-color);
+
+    &:hover {
+        color: $hover_color;
+        background-color: $hover_background;
+    }
+}
+
+// Transitions
+@mixin transition-type-1($transition_property: all) {
+    transition: $transition_property .3s linear;
 }
