--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -14,11 +14,13 @@ body {
 }
 
 ul {
-    list-style: unset;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 a {
-    text-decoration: unset;
+    text-decoration: none;
     color: unset;
 
     &:hover {
