--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -9,6 +9,8 @@ $title-font: 'Caveat';
 // Text Colors
 $base-color: #797979;
 $logo-color: #374a5e;
+$link-color: #1b1b1b;
+$social-color: #797979;
 
 // Background Colors
 $bg-countdown: #F5F5F5;
