--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -11,6 +11,7 @@ $base-color: #797979;
 $logo-color: #374a5e;
 $link-color: #1b1b1b;
 $social-color: #797979;
+$invisible-color: #00000000;
 
 // Background Colors
 $bg-countdown: #F5F5F5;
