--- a/src/assets/style/mixins.scss
+++ b/src/assets/style/mixins.scss
@@ -20,3 +20,16 @@
 @mixin transition-type-1($transition_property: all) {
     transition: $transition_property .3s linear;
 }
+
+// Social Media
+@mixin menu-social-media {
+    margin: 0 8px;
+    vertical-align: middle;
+    font-size: 17px;
+    color: $social-color;
+    @include transition-type-1(color);
+
+    &:hover {
+        color: darken($social-color, 30%);
+    }
+}
