--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -15,6 +15,7 @@ $invisible-color: #00000000;
 
 // Background Colors
 $bg-countdown: #F5F5F5;
+$bg-jumbotron: #FBF9F6;
 
 // Button Colors
 $btn-1-color: #ffffff;
