--- a/src/assets/style/mixins.scss
+++ b/src/assets/style/mixins.scss
@@ -33,3 +33,10 @@
         color: darken($social-color, 30%);
     }
 }
+
+// Section Title
+@mixin section-title {
+    font-family: $title-font;
+    font-size: 50px;
+    color: $title-color;
+}
