--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -13,6 +13,7 @@ $sub-title-color: #333333;
 $social-color: #797979;
 $invisible-color: #00000000;
 $title-color: #76CAF2;
+$ashtag-color: #EF6F31;
 
 // Background Colors
 $bg-countdown: #F5F5F5;
