Create Like Column Right

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -23,3 +23,8 @@ $bg-jumbotron: #FBF9F6;
 $btn-1-color: #ffffff;
 $btn-1-bg-color: #EF6F31;
 $btn-1-bg-color-hover: #6AC5F1;
+
+$btn-2-color: #F0824C;
+$btn-2-bg-color: #FDF0EA;
+$btn-2-color-hover: #FFFFFF;
+$btn-2-bg-color-hover: #F0824C;
