--- a/src/assets/style/general.scss
+++ b/src/assets/style/general.scss
@@ -40,3 +40,9 @@ a {
     @include transition-type-1(color);
     @include transition-type-1(background-color);
 }
+
+.btn_type_3 {
+    @include button-layout-2($btn-2-color, $btn-2-bg-color, $btn-2-color-hover, $btn-2-bg-color-hover);
+    @include transition-type-1(color);
+    @include transition-type-1(background-color);
+}
