--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -18,6 +18,7 @@ $ashtag-color: #EF6F31;
 // Background Colors
 $bg-countdown: #F5F5F5;
 $bg-jumbotron: #FBF9F6;
+$bg-testimonials: #FAF8F6;
 
 // Button Colors
 $btn-1-color: #ffffff;
