--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -8,7 +8,7 @@ $title-font: 'Caveat';
 // Text Colors
 $base-color: #797979;
 $logo-color: #374a5e;
-$link-color: #1b1b1b;
+$link-color: #1B1B1B;
 $sub-title-color: #333333;
 $social-color: #797979;
 $invisible-color: #00000000;
@@ -21,7 +21,7 @@ $bg-jumbotron: #FBF9F6;
 $bg-testimonials: #FAF8F6;
 
 // Button Colors
-$btn-1-color: #ffffff;
+$btn-1-color: #FFFFFF;
 $btn-1-bg-color: #EF6F31;
 $btn-1-bg-color-hover: #6AC5F1;
 
