Font Family Londrina Shadow

--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -2,8 +2,10 @@
 @import '~@fontsource/roboto/index.css';
 @import '~@fontsource/roboto/700.css';
 @import '~@fontsource/caveat/index.css';
+@import '~@fontsource/londrina-shadow/index.css';
 $base-font: 'Roboto';
 $title-font: 'Caveat';
+$decoration-font: 'Londrina Shadow';
 
 // Text Colors
 $base-color: #797979;
