--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -21,6 +21,7 @@ $ashtag-color: #EF6F31;
 $bg-countdown: #F5F5F5;
 $bg-jumbotron: #FBF9F6;
 $bg-testimonials: #FAF8F6;
+$bg-newsletter: #244186;
 
 // Button Colors
 $btn-1-color: #FFFFFF;
