--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -3,9 +3,11 @@
 @import '~@fontsource/roboto/700.css';
 @import '~@fontsource/caveat/index.css';
 @import '~@fontsource/londrina-shadow/index.css';
+@import '~@fontsource/lora/index.css';
 $base-font: 'Roboto';
 $title-font: 'Caveat';
 $decoration-font: 'Londrina Shadow';
+$newsletter-font: 'Lora';
 
 // Text Colors
 $base-color: #797979;
