--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -24,6 +24,7 @@ $bg-countdown: #F5F5F5;
 $bg-jumbotron: #FBF9F6;
 $bg-testimonials: #FAF8F6;
 $bg-newsletter: #244186;
+$bg-articles: #F5F7FA;
 
 // Button Colors
 $btn-1-color: #FFFFFF;
