--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -25,6 +25,7 @@ $bg-jumbotron: #FBF9F6;
 $bg-testimonials: #FAF8F6;
 $bg-newsletter: #244186;
 $bg-articles: #F5F7FA;
+$bg-opaque: #00000044;
 
 // Button Colors
 $btn-1-color: #FFFFFF;
